v. 0.17.5
- add advanced-plastics and plate-pack-1 back
- balanced science recipe to match version 0.17
- balanced robot recipe
- include glass into some recipe
- move gem to bob raw material
- add bob extended electronics
- add modular chest support
- add lead ammo crafting 

v. 0.17.4
- lamp now use glass
- add fix for omnilib
- move some code around to match it category
- balance some recipe
- fix crash when already have burner assembly machine

v. 0.17.3
- fix remove ingredient count limit
- fix for some mod combination inserter don't cost burner inserter

v. 0.17.2
- balance some recipes

v. 0.17.1
- add support for Bio Industries
- inserter now cost burner inserter
- mining drill now use burner mining drill

v. 0.17.0
- update to game version 0.17
- drop support for Pyanodons mods

v. 0.16.21
- balanced recipe
- add bobExtended engine
- recipe change (Red Fracture circuit, Logistic package) plate balanced
- (bobExtended) frame machine recipe balance
- buff solar panel can be disable
- add plastic bar and rubber to many recipe
- add advanced-plastics using angel liquid-plastics
- Hot Fix : Electronics assembling can now craft anything

v. 0.16.20
- add compatible for angels industries
- increase pyhigh electronics components stack size
- balanced recipe 
- fix (coke)coal gas recipe not override
- group angel industries into bob logistics
- remove fluid box from angel chem plant if not use 
- fix recipe using (bob)carbon instead of (angel)carbon if present for basic-electronics-components


v. 0.16.19 
- increase ingredient count of all electronics assembling machine
- (angel) increase Glass stack size
- (bobExtended) frame2 can now be unlock early

v. 0.16.18
- can't craft some item when angel not load
- (extremely) hot fix (py) duplicate ingredient in some recipe

v. 0.16.17
- fix (angel - bobExtended) unable craft floatation cell due to require zinc -> brass -> frame2

v. 0.16.16
- (pycoal) reduce copper cost of flask