@@ -15,6 +15,7 @@ momo-enable-bob-extend-belt= -- Enable Longer Underground Belt
 momo-enable-bob-extend-gem= -- Enable Gems cost 
 momo-enable-bob-extend-engine= -- Enable engine recipe cost
 momo-enable-bob-extend-ele= -- Enable Electronics
+momo-enable-bob-extend-slag= -- Enable Melt ore to slag
 momo-enable-bob-extend-tech= -- Enable Tech
 momo-buff-solar=Buff Solar Panel 2 & 3 
 momo-evo-reduce-factor=[Experiment] Decrease bitter evolution/minute
@@ -30,5 +31,6 @@ momo-enable-bob-extend-belt=<<Bob's Extended must Enable>> Enable 2x longer vers
 momo-enable-bob-extend-gem=<<Bob's Extended must Enable>> Set to 0 = diable || Set how many gem need to craft into the next tier
 momo-enable-bob-extendenginetech=<<Bob's Extended must Enable>> Add some material to engine production line
 momo-enable-bob-extend-ele=<<Bob's Extended must Enable>> Add intermediate materials for electronics
+momo-enable-bob-extend-slag=<<Bob's Extended must Enable>>
 momo-enable-bob-extend-tech=<<Bob's Extended must Enable>> Currently have nothing yet!
 momo-evo-reduce-factor= Set to 0 = diable || value should be between 0.3 - 1.3, over 1.3 evolution factor may not increase 
