@@ -10,4 +10,8 @@ if settings.startup["momo-enable-bob-extend"].value then
 	if settings.startup["momo-enable-bob-extend-ele"].value then
 		require("bobextended-update-ele")
 	end
+	
+	if settings.startup["momo-enable-bob-extend-slag"].value then
+		require("bobextended-update-slag")
+	end
 end
